    supports stable evaluation of basic higher functions near poles and zeros
    built-in support of conversion of all (integer, real, huge, tiny) values to other bases
    built-in support of logic operations
    built-in support of the missing area hyperbolic functions
    built-in support of a new class of functions, Gamma and friends
  fixed a bug in GEOMEAN

SpeedCrunch 0.8
---------------------
New features:
 support for different bases: hex, octal and binary
 postfix factorial operator (!)
 support inserting important physics constants
 history, functions, variables, constants in docked/floated windows
 added engineering notation
 added unmutable variable "phi" (golden number = 1.6180339887498948482...)
 "tip of the day"
 option to hide from taskbar and minimize to system tray
 support for right-to-left languages (not perfect, but very close to it)
 translations: de es es_AR fi fr he it nl no pt pt_BR ro ru sv (see TRANSLATORS)

New functions:
 MIN: get the minimum
 MAX: get the maximum
 SUM: sum of all numbers
 PRODUCT: product of all numbers
 AVERAGE: average or mean
 GEOMEAN: geometrical mean
 SIGN: signum
 DEGREES: convert radian to degree
 RADIANS: convert degree to radian
 LG: base-2 logarithm
 CBRT: cube root
 TRUNC: truncate digits
 FLOOR: floor
 CEIL: ceiling
 ROUND: round number
 NCR: combination
 NPR: permutation
 GCD: greatest common divisor
 SEC: secant
 CSC: cosecant
 COT: cotangent
 BINOMPMF: binomial probability mass function
 BINOMCDF: binomial cumulative distribution function
 BINOMMEAN: binomial distribution mean
 BINOMVAR: binomial distribution variance
 HYPERPMF: hypergeometric probability mass function
 HYPERCDF: hypergeometric cumulative distribution function
 HYPERMEAN: hypergeometric distribution mean
 HYPERVAR: hypergeometric distribution variance
 POIPMF: poissonian probability mass function
 POICDF: poissonian cumulative distribution function
 POIMEAN: poissonian distribution mean
 POIVAR: poissonian distribution variance
